--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -27,3 +27,10 @@ body {
   align-items: center;
   gap: 1rem;
 }
+
+.form_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 5rem;
+}
